corrections in transport layer + swagger for habit endpoints
